--- a/velocity_pc_clusterer/package.xml
+++ b/velocity_pc_clusterer/package.xml
@@ -10,9 +10,14 @@
   <depend>dynamic_reconfigure</depend>
   <depend>image_transport</depend>
   <depend>moving_object_msgs</depend>
+  <depend>nodelet</depend>
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>visualization_msgs</depend>
   <build_depend>velocity_estimator</build_depend>
+
+  <export>
+    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
+  </export>
 </package>
