--- a/velocity_estimator/package.xml
+++ b/velocity_estimator/package.xml
@@ -14,7 +14,7 @@
   <depend>image_transport</depend>
   <depend>message_filters</depend>
   <depend>nodelet</depend>
-  <depend>dense_flow_msgs</depend>
+  <depend>optical_flow_msgs</depend>
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
