--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -3,7 +3,7 @@ FROM ros:melodic-perception
 # Create a Catkin workspace
 RUN mkdir -p /root/catkin_ws/src
 WORKDIR /root/catkin_ws
-RUN bash -c "source /opt/ros/melodic/setup.bash; \
+RUN bash -c "source /opt/ros/melodic/setup.bash && \
              catkin_make"
 
 # Download sources
@@ -12,11 +12,11 @@ RUN git clone https://github.com/ActiveIntelligentSystemsLab/ros_optical_flow.gi
 RUN git clone https://aisl-serv6.aisl.cs.tut.ac.jp:20443/fujimoto/moving_object_detector.git src/moving_object_detector
 
 # Install dependencies
-RUN bash -c "apt-get update; \
-             source /opt/ros/melodic/setup.bash; \
+RUN bash -c "apt-get update && \
+             source /opt/ros/melodic/setup.bash && \
              rosdep install -i -y -r --from-paths src"
 
 # Build
-RUN bash -c "source /opt/ros/melodic/setup.bash; \
-             source devel/setup.bash; \
+RUN bash -c "source /opt/ros/melodic/setup.bash && \
+             source devel/setup.bash && \
              catkin_make"
