--- a/docker/rqt/dockerfile
+++ b/docker/rqt/dockerfile
@@ -4,7 +4,7 @@ RUN git clone https://aisl-serv6.aisl.cs.tut.ac.jp:20443/fujimoto/moving_object_
 
 # For support OpenGL on NVIDIA GPU
 ENV NVIDIA_VISIBLE_DEVICES all
-ENV NVIDIA_DRIVER_CAPABILITIES graphics,utility
+ENV NVIDIA_DRIVER_CAPABILITIES display,graphics,utility
 
 # Load ROS environment at docker exec bash
 RUN echo "source /opt/ros/melodic/setup.bash" >> /root/.bashrc
