--- a/moving_object_detector_launch/package.xml
+++ b/moving_object_detector_launch/package.xml
@@ -7,6 +7,7 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>disparity_visualize</exec_depend>
   <exec_depend>nodelet</exec_depend>
   <exec_depend>odometry_to_marker</exec_depend>
   <exec_depend>project_moving_objects_on_image</exec_depend>
