--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "2.3"
 services: 
-  move_detect_master:
+  master:
     container_name: move_detect_master
     image: ros:melodic-ros-core
     command: roscore
   
-  move_detect_launch:
+  launch:
     container_name: move_detect_launch
     build: .
     command: >
@@ -17,7 +17,7 @@ services:
       - ROS_HOSTNAME=move_detect_launch
       - ROS_MASTER_URI=http://move_detect_master:11311
   
-  move_detect_pwc:
+  pwc:
     container_name: move_detect_pwc
     build: pwc_net_ros/docker
     command: rosrun pwc_net pwc_net_node image:=/synchronized/left/image_rect_color
@@ -26,7 +26,7 @@ services:
       - ROS_HOSTNAME=move_detect_pwc
       - ROS_MASTER_URI=http://move_detect_master:11311
   
-  move_detect_sgm:
+  sgm:
     container_name: move_detect_sgm
     build: sgm_gpu_ros/docker
     command: rosrun sgm_gpu sgm_gpu_node left_image:=/synchronized/left/image_rect_color right_image:=/synchronized/right/image_rect_color
@@ -34,31 +34,8 @@ services:
     environment: 
       - ROS_HOSTNAME=move_detect_sgm
       - ROS_MASTER_URI=http://move_detect_master:11311
-  
-  move_detect_gazebo:
-    container_name: move_detect_sim
-    build: moving_object_simulator/docker
-    command: roslaunch --wait gazebo_factory_world factory_world.launch
-    runtime: nvidia
-    environment: 
-      - ROS_HOSTNAME=move_detect_gazebo
-      - ROS_MASTER_URI=http://move_detect_master:11311
-      - DISPLAY
-      - QT_X11_NO_MITSHM=1
-    volumes: 
-      - /tmp/.X11-unix:/tmp/.X11-unix:rw
-    
-  move_detect_spawn_robot:
-    container_name: move_detect_spawn_robot
-    build: moving_object_simulator/docker
-    command: roslaunch --wait moving_object_simulator gazebo_simulation_spawn_robots.launch
-    environment:
-      - ROS_HOSTNAME=move_detect_spawn_robot
-      - ROS_MASTER_URI=http://move_detect_master:11311
-    devices: 
-      - /dev/input/js0:/dev/input/js0
 
-  move_detect_rqt:
+  rqt:
     container_name: move_detect_rqt
     build: rqt
     command: rqt --perspective-file /root/moving_object_detector/moving_object_detector_launch/rqt/moving_object_detector.perspective
