Use Docker Volume to save downloaded gazebo model

--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -12,6 +12,7 @@ services:
       - QT_X11_NO_MITSHM=1
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - gazebo-dir:/root/.gazebo
   
   spawn_robot:
     container_name: move_detect_spawn_robot
@@ -22,3 +23,6 @@ services:
       - ROS_MASTER_URI=http://move_detect_master:11311
     devices: 
       - /dev/input/js0:/dev/input/js0
+
+volumes: 
+  gazebo-dir:
