--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "docker/moving_object_simulator"]
 	path = docker/moving_object_simulator
 	url = https://aisl-serv6.aisl.cs.tut.ac.jp:20443/fujimoto/moving_object_simulator.git
+[submodule "docker/sintel_stereo_publisher"]
+	path = docker/sintel_stereo_publisher
+	url = https://github.com/ActiveIntelligentSystemsLab/sintel_stereo_publisher.git
