--- a/docker/docker-compose.sintel.yml
+++ b/docker/docker-compose.sintel.yml
@@ -7,7 +7,9 @@ services:
       rosrun sintel_stereo_publisher sintel_stereo_publisher 
       _dataset_directory:=/root/MPI-Sintel-stereo-training
       _camera_param_file:=/root/MPI-Sintel-depth-training/training/camdata_left/alley_1/frame_0001.cam
-      _loop:=true
+      _loop:=false
+      _pause:=true
+      _publish_rate:=1.0
     environment: 
       - ROS_HOSTNAME=move_detect_sintel
       - ROS_MASTER_URI=http://move_detect_master:11311
@@ -18,3 +20,11 @@ services:
       left_image_topic:=/sintel_stereo_publisher/left/image_rect_color
       right_image_topic:=/sintel_stereo_publisher/right/image_rect_color 
       use_sim_time:=false
+
+  pwc:
+    command: >
+      rosrun pwc_net pwc_net_node 
+      image:=/synchronized/left/image_rect_color 
+      _image_width:=1024
+      _image_height:=436
+
