--- a/scene_flow_constructor/cfg/SceneFlowConstructor.cfg
+++ b/scene_flow_constructor/cfg/SceneFlowConstructor.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "velocity_estimator"
+PACKAGE = "scene_flow_constructor"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -8,4 +8,4 @@ gen = ParameterGenerator()
 gen.add("dynamic_flow_diff", int_t, 0, "Difference[pixel] between optical flow and calculated static optical flow treated as dynamic pixel", 5, 1, 100)
 gen.add("max_color_velocity", double_t, 0, "When velocity of point is faster than this parameter[m], maximum color intensity is assigned at velocity image", 0.1, 0.1, 10.0)
 
-exit(gen.generate(PACKAGE, "velocity_estimator", "VelocityEstimator"))
+exit(gen.generate(PACKAGE, "scene_flow_constructor", "SceneFlowConstructor"))
