--- a/velocity_pc_clusterer/package.xml
+++ b/velocity_pc_clusterer/package.xml
@@ -15,7 +15,7 @@
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>visualization_msgs</depend>
-  <build_depend>velocity_estimator</build_depend>
+  <build_depend>scene_flow_constructor</build_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
