--- a/scene_flow_clusterer/package.xml
+++ b/scene_flow_clusterer/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>velocity_pc_clusterer</name>
+  <name>scene_flow_clusterer</name>
   <version>0.0.0</version>
-  <description>Clustering velocity pointcloud to detect moving objects</description>
+  <description>Clustering scene flow to detect moving objects</description>
   <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
