--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -3,6 +3,8 @@ services:
   gazebo:
     container_name: move_detect_gazebo
     build: moving_object_simulator/docker
+    depends_on:
+      - master
     command: roslaunch --wait gazebo_factory_world factory_world.launch
     runtime: nvidia
     environment: 
@@ -17,6 +19,9 @@ services:
   spawn_robot:
     container_name: move_detect_spawn_robot
     build: moving_object_simulator/docker
+    depends_on:
+      - master
+      - gazebo
     command: roslaunch --wait moving_object_simulator gazebo_simulation_spawn_robots.launch
     environment:
       - ROS_HOSTNAME=move_detect_spawn_robot
