--- a/docker/docker-compose.sintel.yml
+++ b/docker/docker-compose.sintel.yml
@@ -15,6 +15,8 @@ services:
     environment: 
       - ROS_HOSTNAME=move_detect_sintel
       - ROS_MASTER_URI=http://move_detect_master:11311
+    volumes:
+      - sintel_root:/root
   
   launch:
     command: >
@@ -30,3 +32,5 @@ services:
       _image_width:=1024
       _image_height:=436
 
+volumes:
+  sintel_root:
