--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -10,7 +10,7 @@ RUN bash -c "source /opt/ros/melodic/setup.bash && \
              catkin config --cmake-args -DCMAKE_BUILD_TYPE=Release"
 
 # Download sources
-RUN git clone https://github.com/fujimo-t/viso2.git src/viso2
+RUN git clone https://github.com/srv/viso2.git
 RUN git clone https://github.com/ActiveIntelligentSystemsLab/ros_optical_flow.git src/ros_optical_flow
 RUN git clone https://github.com/ActiveIntelligentSystemsLab/moving_object_detector.git src/moving_object_detector
 RUN git clone https://github.com/ActiveIntelligentSystemsLab/disparity_visualize.git src/disparity_visualize
