--- a/scene_flow_constructor/package.xml
+++ b/scene_flow_constructor/package.xml
@@ -15,13 +15,15 @@
   <depend>message_filters</depend>
   <depend>nodelet</depend>
   <depend>optical_flow_msgs</depend>
+  <depend>optical_flow_srvs</depend>
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>sgm_gpu</depend>
   <depend>std_msgs</depend>
   <depend>stereo_msgs</depend>
   <depend>tf2_eigen</depend>
-  <depend>viso2_ros</depend>
+  <depend>viso2_stereo_server</depend>
   <depend>libopencv-dev</depend>
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>message_generation</build_depend>
