--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -14,6 +14,7 @@ RUN git clone https://github.com/srv/viso2.git
 RUN git clone https://github.com/ActiveIntelligentSystemsLab/ros_optical_flow.git src/ros_optical_flow
 RUN git clone https://github.com/ActiveIntelligentSystemsLab/moving_object_detector.git src/moving_object_detector
 RUN git clone https://github.com/ActiveIntelligentSystemsLab/disparity_visualize.git src/disparity_visualize
+RUN git clone https://github.com/ActiveIntelligentSystemsLab/disparity_srv.git src/disparity_srv
 
 # Install dependencies
 RUN bash -c "apt-get update && \
