--- a/docker/rqt/dockerfile
+++ b/docker/rqt/dockerfile
@@ -1,6 +1,6 @@
 FROM osrf/ros:melodic-desktop-full
 
-RUN git clone https://aisl-serv6.aisl.cs.tut.ac.jp:20443/fujimoto/moving_object_detector.git /root/moving_object_detector
+RUN git clone https://github.com/ActiveIntelligentSystemsLab/moving_object_detector.git /root/moving_object_detector
 
 # For support OpenGL on NVIDIA GPU
 ENV NVIDIA_VISIBLE_DEVICES all
