--- a/viso2_stereo_server/package.xml
+++ b/viso2_stereo_server/package.xml
@@ -19,6 +19,7 @@
   <depend>std_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
   <build_depend>message_generation</build_depend> 
   <exec_depend>message_runtime</exec_depend>
   <!-- rosdep key -->
