--- a/moving_object_tracker/package.xml
+++ b/moving_object_tracker/package.xml
@@ -7,13 +7,14 @@
   <license>TODO</license>
   
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>dynamic_reconfigure</depend>
   <depend>geometry_msgs</depend>
   <depend>moving_object_msgs</depend>
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_ros</depend>
-  <build_depend>kkl</build_depend> <!-- from https://aisl-serv6.aisl.cs.tut.ac.jp:20443/koide/grace_person_following -->
+  <build_depend>kkl</build_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
 </package>
