--- a/scene_flow_constructor/CMakeLists.txt
+++ b/scene_flow_constructor/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(scene_flow_constructor)
 
+add_definitions(-msse3)
+
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   disparity_srv
