--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -73,7 +73,7 @@ RUN cd /root && git clone https://github.com/NVlabs/PWC-Net.git
 RUN cp /root/PWC-Net/Caffe/warping_code/warp_layer.cu /root/PWC-Net/Caffe/warping_code/warp_layer.cpp /root/flownet2/src/caffe/layers/
 RUN cp /root/PWC-Net/Caffe/warping_code/warp_layer.hpp /root/flownet2/include/caffe/layers/
 # Set make config to Caffe
-COPY caffe/Makefile.config /root/flownet2/
+COPY pwc/caffe/Makefile.config /root/flownet2/
 # Build Caffe for PWC-Net
 RUN cd /root/flownet2 && make -j4 all
 
