--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,22 +4,6 @@ services:
     container_name: move_detect_master
     build: .
     command: roscore
-  
-  launch:
-    container_name: move_detect_launch
-    build: .
-    depends_on:
-      - master
-    command: >
-      roslaunch --wait moving_object_detector_launch moving_object_detection.launch 
-      left_image_topic:=/stereo_robot/mobile_base/camera/left/image_raw
-      right_image_topic:=/stereo_robot/mobile_base/camera/right/image_raw 
-      use_sim_time:=true
-    environment: 
-      - ROS_HOSTNAME=move_detect_launch
-      - ROS_MASTER_URI=http://move_detect_master:11311
-    volumes:
-      - root:/root
 
   rqt:
     container_name: move_detect_rqt
@@ -51,6 +35,53 @@ services:
       - QT_X11_NO_MITSHM=1
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - root:/root
+
+  terminal:
+    container_name: move_detect_terminal
+    build: .
+    depends_on:
+      - master
+    command: lxterminal
+    runtime: nvidia
+    environment: 
+      - ROS_HOSTNAME=move_detect_terminal
+      - ROS_MASTER_URI=http://move_detect_master:11311
+      - DISPLAY
+      - QT_X11_NO_MITSHM=1
+    volumes: 
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - root:/root
+  
+  gazebo:
+    container_name: move_detect_gazebo
+    build: .
+    depends_on:
+      - master
+    command: roslaunch --wait gazebo_factory_world factory_world.launch
+    runtime: nvidia
+    environment: 
+      - ROS_HOSTNAME=move_detect_gazebo
+      - ROS_MASTER_URI=http://move_detect_master:11311
+      - DISPLAY
+      - QT_X11_NO_MITSHM=1
+    volumes: 
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - root:/root
+  
+  spawn_robot:
+    container_name: move_detect_spawn_robot
+    build: .
+    depends_on:
+      - master
+      - gazebo
+    command: roslaunch --wait moving_object_simulator gazebo_simulation_spawn_robots.launch
+    environment:
+      - ROS_HOSTNAME=move_detect_spawn_robot
+      - ROS_MASTER_URI=http://move_detect_master:11311
+    devices: 
+      - /dev/input/js0:/dev/input/js0
+    volumes:
       - root:/root
 
 volumes: 
