docker-compose: enable privileged option for terminal container To access devices such as XBox controller and ZED Stereo Camera

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - master
     command: lxterminal
     runtime: nvidia
+    privileged: true
     environment: 
       - ROS_HOSTNAME=move_detect_terminal
       - ROS_MASTER_URI=http://move_detect_master:11311
