--- a/scene_flow_constructor/package.xml
+++ b/scene_flow_constructor/package.xml
@@ -13,6 +13,7 @@
   <depend>dynamic_reconfigure</depend>
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
+  <depend>libviso2</depend>
   <depend>message_filters</depend>
   <depend>nodelet</depend>
   <depend>optical_flow_msgs</depend>
@@ -22,8 +23,10 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>stereo_msgs</depend>
+  <depend>tf2</depend>
   <depend>tf2_eigen</depend>
-  <depend>viso2_stereo_server</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>libopencv-dev</depend>
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>message_generation</build_depend>
