--- a/scene_flow_constructor/package.xml
+++ b/scene_flow_constructor/package.xml
@@ -9,7 +9,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>cv_bridge</depend>
   <depend>disparity_image_proc</depend>
-  <depend>disparity_srv</depend>
   <depend>dynamic_reconfigure</depend>
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
@@ -21,6 +20,7 @@
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>sgm_gpu</depend>
   <depend>std_msgs</depend>
   <depend>stereo_msgs</depend>
   <depend>tf2</depend>
